# nrf-radio-gadget

./: Cargo.toml  Makefile.toml  README.md  build.rs  memory.x  nrf-radio-gadget.hex  nrf-radio-gadget.uf2  requirements.txt  test.py
.cargo/: config.toml
client/: __init__.py  ieee_802_15_4_pb2.py  ieee_802_15_4_pb2.pyi
proto/: ieee_802_15_4.proto
src/: main.rs  proto.rs  radio.rs
