[package]
name = "nrf-radio-gadget"
version = "0.1.0"
authors = ["David Ireland <davidji@pobox.com>"]
description = "Access the 802.14.5 Radio as a TCp service"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0.1"
defmt-rtt = "1.0.0"

fugit = "0.3.7"

rtic = { version = "2.2.0", features = [ "thumbv7-backend" ] }
rtic-monotonics = { version = "2.0.3", features = [ "nrf52840", "defmt" ]}
rtic-sync = { version = "1.4.0", features = ["defmt-03" ]}

embedded-hal = { version = "1.0.0" }
embedded-hal-nb = { version = "1.0.0" }

panic-probe = { version = "1.0.0", features = [ "print-defmt" ] }

usb-device = "0.3.2"
heapless = { version = "0.8", features = [ "defmt-03"] }
paste = { package = "pastey", version = "0.1.0" }
futures = { version = "0.3.31", default-features = false, features=["async-await"] }
gadget = { package="rtic2-usb-gadget", path="../rtic2-usb-gadget" }
micropb = { version = "0.3.0", features = ["container-heapless"] }
sha2 = { version="0.10.9", default-features = false }

[dependencies.hal]
package = "nrf52840-hal"
path = "../nrf-hal/nrf52840-hal"
# version = "0.18.0" 
features = [ "rt" ]

# this lets you use `cargo fix`!
[[bin]]
name = "nrf-radio-gadget"
test = false
bench = false

[build-dependencies]
micropb-gen = "0.3.0"
